feat(Auth): add more endpoint in auth module
