# modules/auth/delivery/http/dto/verify_user_response.go
@@ -1,0 +1,6 @@
+package dto
+
+type VerifyUserResponse struct {
+	UserExists  bool     `json:"user_exists"`
+	Suggestions []string `json:"suggestions,omitempty"`
+}
