# modules/auth/usecase/dto/reset_password_dto.go
@@ -1,0 +1,7 @@
+package dto
+
+type ResetPasswordDto struct {
+	Email                string
+	Password             string
+	PasswordConfirmation string
+}
